fix solution api
